@@ -1,0 +1,16 @@
+require "test/unit"
+require "test/helper"
+require "lib/<%=project.name%>"
+
+class <%=project.class_name%>Test < Test::Unit::TestCase
+
+  def setup
+    # start here
+  end
+
+  should "check the truth" do
+    assert true
+  end
+
+end
+
